Bug 489871 - CSS comments should not be allowed in presentation attribute values. r=dbaron a=roc

--HG--
extra : rebase_source : 7a41fca1422a024934839ebe0c50cc479223915f